--- a/package.json
+++ b/package.json
@@ -1,30 +1,36 @@
 {
-  "name": "catered-sales-questionnaire",
+  "name": "catered-savings",
   "version": "1.0.0",
-  "description": "A step-by-step questionnaire system for lead generation and data collection",
+  "description": "A deal aggregation platform for weekly savings emails with 50%+ off deals",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
     "build": "webpack --mode production",
-    "dev-build": "webpack --mode development --watch"
+    "dev-build": "webpack --mode development --watch",
+    "automate": "node run_automation.js",
+    "weekly": "node weekly_update.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "nodemailer": "^6.9.7",
+    "@mailchimp/mailchimp_marketing": "^3.0.80",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4",
     "css-loader": "^6.8.1",
+    "html-webpack-plugin": "^5.5.3",
+    "nodemon": "^3.0.1",
     "style-loader": "^3.3.3",
-    "html-webpack-plugin": "^5.5.3"
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
   },
-  "keywords": ["questionnaire", "lead-generation", "data-collection"],
+  "keywords": [
+    "questionnaire",
+    "lead-generation",
+    "data-collection"
+  ],
   "author": "Your Name",
   "license": "MIT"
 }
