--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
   "dependencies": {
     "@mailchimp/mailchimp_marketing": "^3.0.80",
     "@prisma/client": "^6.15.0",
+    "bull": "^4.16.5",
+    "cheerio": "^1.1.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
-    "prisma": "^6.15.0"
+    "node-cron": "^4.2.1",
+    "prisma": "^6.15.0",
+    "puppeteer": "^24.17.1",
+    "redis": "^5.8.2"
   },
   "devDependencies": {
     "css-loader": "^6.8.1",
