--- a/env.example
+++ b/env.example
@@ -6,7 +6,17 @@ TEAM_EMAIL=your-team@company.com
 # Server Configuration
 PORT=3000
 
+# Mailchimp Configuration
+MAILCHIMP_API_KEY=your-mailchimp-api-key
+MAILCHIMP_SERVER_PREFIX=your-server-prefix
+MAILCHIMP_LIST_ID=your-list-id
+
 # Note: For Gmail, you'll need to:
 # 1. Enable 2-factor authentication
 # 2. Generate an "App Password" 
 # 3. Use that app password instead of your regular password
+
+# Note: For Mailchimp, you'll need to:
+# 1. Get your API key from Mailchimp Account > Extras > API Keys
+# 2. Get your server prefix from the API key (e.g., "us1", "us2", etc.)
+# 3. Get your list ID from Mailchimp Audience > Settings > Audience name and defaults
