--- a/package.json
+++ b/package.json
@@ -1,46 +1,41 @@
 {
-  "name": "catered-savings",
+  "name": "catered-sales",
   "version": "1.0.0",
-  "description": "A deal aggregation platform for weekly savings emails with 50%+ off deals",
+  "description": "Personalized weekly deals platform with email automation",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build": "webpack --mode production",
-    "dev-build": "webpack --mode development --watch",
-    "automate": "node run_automation.js",
-    "weekly": "node weekly_update.js",
+    "build": "npx prisma generate",
+    "postinstall": "npx prisma generate",
     "weekly-automation": "node weekly-automation.js",
-    "refresh-deals": "curl -X POST http://localhost:3000/api/weekly-automation/refresh-deals",
-    "update-mailchimp": "curl -X POST http://localhost:3000/api/weekly-automation/update-mailchimp"
+    "test": "echo \"No tests specified\" && exit 0"
   },
+  "keywords": [
+    "deals",
+    "email-automation",
+    "personalized",
+    "mailchimp",
+    "nodejs",
+    "express"
+  ],
+  "author": "Brent LeBlanc",
+  "license": "MIT",
   "dependencies": {
     "@mailchimp/mailchimp_marketing": "^3.0.80",
-    "@prisma/client": "^6.15.0",
-    "bull": "^4.16.5",
-    "cheerio": "^1.1.2",
+    "@prisma/client": "^5.7.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
-    "node-cron": "^4.2.1",
-    "prisma": "^6.15.0",
-    "puppeteer": "^24.17.1",
-    "redis": "^5.8.2"
+    "puppeteer": "^21.6.1",
+    "cheerio": "^1.0.0-rc.12"
   },
   "devDependencies": {
-    "css-loader": "^6.8.1",
-    "html-webpack-plugin": "^5.5.3",
-    "nodemon": "^3.0.1",
-    "style-loader": "^3.3.3",
-    "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4"
+    "nodemon": "^3.0.2",
+    "prisma": "^5.7.1"
   },
-  "keywords": [
-    "questionnaire",
-    "lead-generation",
-    "data-collection"
-  ],
-  "author": "Your Name",
-  "license": "MIT"
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  }
 }
