--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "npx prisma generate",
     "postinstall": "npx prisma generate",
     "weekly-automation": "node weekly-automation.js",
-    "test": "echo \"No tests specified\" && exit 0"
+    "test": "echo \"No tests specified\" && exit 0",
+    "railway:build": "npm install && npx prisma generate"
   },
   "keywords": [
     "deals",
