--- a/package.json
+++ b/package.json
@@ -27,9 +27,7 @@
     "@prisma/client": "^5.7.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "puppeteer": "^21.6.1",
-    "cheerio": "^1.0.0-rc.12"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2",
