--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Personalized weekly deals platform with email automation",
   "main": "server.js",
   "scripts": {
-    "start": "node server-minimal.js",
+    "start": "node server.js",
     "dev": "nodemon server.js",
     "build": "echo 'No build step needed'",
     "weekly-automation": "node weekly-automation.js",
