🧹 Clean up database setup - PostgreSQL only
- Remove SQLite database files (dev.db)
- Update documentation to reflect PostgreSQL-only setup
- Add DATABASE_URL to env.example
- Add CSV upload guide and templates
- Verify database connection is working properly

--- a/env.example
+++ b/env.example
@@ -1,3 +1,6 @@
+# Database Configuration (PostgreSQL)
+DATABASE_URL=postgresql://username:password@localhost:5432/catered_sales
+
 # Email Configuration
 EMAIL_USER=your-email@gmail.com
 EMAIL_PASS=your-app-password
