Major updates: Fixed admin portal categories display, cleaned up project structure, added logo, improved user management
- Fixed getAllUsers() to parse JSON preferences and display categories
- Added colorful category tags with icons in admin portal
- Fixed JavaScript error in renderUsersTable()
- Updated logo across all pages
- Cleaned up project structure (removed unused files)
- Added admin authentication
- Improved personalized deals page styling
- Added category display on deals page
- Fixed authentication flow for admin portal

--- a/env.example
+++ b/env.example
@@ -9,6 +9,9 @@ TEAM_EMAIL=your-team@company.com
 # Server Configuration
 PORT=3000
 
+# Admin Authentication
+ADMIN_PASSWORD=your-secure-admin-password
+
 # Mailchimp Configuration
 MAILCHIMP_API_KEY=your-mailchimp-api-key
 MAILCHIMP_SERVER=your-server-prefix
