Improve analytics page styling and layout
- Redesign category distribution with professional bar charts and percentages
- Add proper category names with title case formatting
- Create interactive category items with hover effects
- Add category summary with total categories and most popular
- Redesign click performance with stat cards and engagement metrics
- Add responsive design for mobile devices
- Replace inline styles with proper CSS classes
- Improve visual hierarchy and readability

--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "Personalized weekly deals platform with email automation",
   "main": "server.js",
   "scripts": {
-    "start": "node server-hybrid.js",
-    "dev": "nodemon server.js",
+    "start": "node server-production.js",
+    "dev": "node dev-server.js",
+    "dev:watch": "nodemon dev-server.js",
     "build": "echo 'No build step needed'",
     "weekly-automation": "node weekly-automation.js",
+    "deploy": "git add . && git commit -m 'Deploy to production' && git push origin main",
     "test": "echo \"No tests specified\" && exit 0"
   },
   "keywords": [
