Implement comprehensive version control system to prevent wrong HTML serving
- Add client-side version checker with console warnings and visual indicators
- Add server-side version validation API endpoint
- Create automated test suite to verify correct files are loaded
- Add deployment checklist with pre/post deployment checks
- Update package.json with test scripts and pre-deploy hooks
- Implement file structure validation and forbidden file checks
- Add version indicator toggle (Ctrl+Shift+V) for debugging
- Ensure main page always loads modern files (styles-modern.css, script-modern.js)
- Prevent serving old versions by validating file references
- Create comprehensive documentation for deployment process

--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "build": "echo 'No build step needed'",
     "weekly-automation": "node weekly-automation.js",
     "deploy": "git add . && git commit -m 'Deploy to production' && git push origin main",
-    "test": "echo \"No tests specified\" && exit 0"
+    "test": "echo \"No tests specified\" && exit 0",
+    "test:version": "node scripts/test-version.js",
+    "test:local": "TEST_URL=http://localhost:3000 node scripts/test-version.js",
+    "pre-deploy": "npm run test:version"
   },
   "keywords": [
     "deals",
