Add BASE_URL configuration and validation
- Add BASE_URL to env.example for production URL configuration
- Create check-base-url.js script to validate BASE_URL settings
- Fix personalized email links to use correct production URL
- Ensure weekly automation uses proper BASE_URL instead of localhost fallback

--- a/env.example
+++ b/env.example
@@ -8,6 +8,7 @@ TEAM_EMAIL=your-team@company.com
 
 # Server Configuration
 PORT=3000
+BASE_URL=https://your-production-domain.com
 
 # Admin Authentication
 ADMIN_PASSWORD=your-secure-admin-password
